# nea-game

./: .gitignore  .main.cpp.swp  <invalid path>  CMakeLists.txt  MMORPG.cbp  MMORPG.depend  MMORPG.layout  README.md  main.cpp
assets/: manifest.xml
client/: CMakeLists.txt
client/include/Entity/: Entity.h
client/include/Gamestates/: Gamestate.h  GamestateGameplay.h  GamestateLogin.h
client/include/Managers/: EntityManager.h  NetworkManager.h  ResourceManager.h  StateManager.h  UIManager.h
client/include/Map/: Level.h  NavMesh.h
client/include/UIElements/: UIElement.h  UIImage.h  UITextField.h
client/include/Utilities/: Crypto.h
client/src/: Main.cpp
client/src/Entity/: Entity.cpp
client/src/Gamestates/: Gamestate.cpp  GamestateGameplay.cpp  GamestateInitialise.cpp  GamestateLogin.cpp  GamestateMenu.cpp
client/src/Managers/: EntityManager.cpp  NetworkManager.cpp  ResourceManager.cpp  StateManager.cpp  UIManager.cpp  WindowManager.cpp
client/src/Map/: Level.cpp  NavMesh.cpp
client/src/UIElements/: UIButton.cpp  UIElement.cpp  UIImage.cpp  UITextField.cpp
client/src/Utilities/: Crypto.cpp  Timing.cpp
include/: Debug.h  Engine.h  NetworkManager.h  ObjectManager.h  ResourceManager.h  Settings.h  WindowManager.h
include/AI/: AIPackage.h
server/: CMakeLists.txt
server/include/: Server.h
server/include/AI/: AI.h
server/include/Entities/: Entity.h  Stats.h
server/include/Map/: Map.h  MapManager.h
server/include/Networking/: NetworkManager.h
server/include/Objects/: ObjectManager.h
server/include/Players/: LoginServer.h  Player.h  PlayerManager.h
server/include/Utilities/: Database.h  Logging.h  Timing.h
server/res/: database.db
server/res/map/: tile0_1.map
server/src/: Main.cpp  Server.cpp
server/src/AI/: AI.cpp
server/src/Entities/: Entity.cpp
server/src/Map/: Map.cpp  MapManager.cpp
server/src/Networking/: NetworkManager.cpp
server/src/Objects/: ObjectManager.cpp
server/src/Players/: LoginServer.cpp  Player.cpp  PlayerManager.cpp
server/src/Utilities/: Database.cpp  Logging.cpp  Timing.cpp
src/: Debug.cpp  Engine.cpp  NetworkManager.cpp  ObjectManager.cpp  ResourceManager.cpp  WindowManager.cpp
(+90 files in other folders)
